cabal-version:      2.4
name:               miniml
version:            0.1.0.0
synopsis:

-- A longer description of the package.
-- description:
homepage:

-- A URL where users can report bugs.
-- bug-reports:
license:            NONE
author:             Stasenko-Konstantin
maintainer:         stasenko.kost@yandex.ru

-- A copyright notice.
-- copyright:
category:           Language
extra-source-files: CHANGELOG.md

executable miniml
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base >=4.12 && <4.13,
                      parsec >=3.1.14.0,
                      haskeline >=0.7.4.3
    hs-source-dirs:   src
    default-language: Haskell2010
